fix(animated-header): overflow hidden on collapse

--- a/packages/react/src/components/AnimatedHeader/components/AnimatedHeader/animated-header.scss
+++ b/packages/react/src/components/AnimatedHeader/components/AnimatedHeader/animated-header.scss
@@ -374,6 +374,7 @@ body {
 }
 
 .#{$prefix}--collapsed {
+  overflow: hidden;
   padding: 0;
   max-block-size: $spacing-09;
   outline: 1px solid $border-subtle-00;
